@@ -66,6 +66,7 @@ ERRORS
                      Parameter 'text' is required.
              From Mo::utils::Language:
                      Parameter 'lang' doesn't contain valid ISO 639-1 code.
+                             Codeset: %s
                              Value: %s
 
 EXAMPLE
